[package]
name = "volatile"
version = "0.4.4"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT OR Apache-2.0"
keywords = ["volatile"]
description = "A simple volatile wrapper type"
documentation = "https://docs.rs/volatile"
repository = "https://github.com/rust-osdev/volatile"

[dependencies]
rustversion = "1.0.5"

[features]
default = ["nightly"]
# Nightly-only features, may break on compiler updates, requires a newish nightly.
nightly = ["const_fn"]
# Allows more functions to be evaluated at compile time.
const_fn = []

[dev-dependencies]
rand = "0.8.3"

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file = "Changelog.md", search = "# Unreleased", replace = "# Unreleased\n\n# {{version}} – {{date}}", exactly = 1 },
]
pre-release-commit-message = "Release version {{version}}"

[package.metadata.docs.rs]
features = ["unstable"]
